--- a/SiphoEngineDemo.csproj
+++ b/SiphoEngineDemo.csproj
@@ -1,20 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\SiphoEngine\SiphoEngine.csproj" />
-	  <Content Include="..\SiphoEngineDebugConsole\bin\$(Configuration)\$(TargetFramework)\SiphoEngineDebugConsole.exe">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Visible>false</Visible>
-	  </Content>
-  </ItemGroup>
-	<Target Name="CopyDebugConsole" AfterTargets="Build">
+	<ItemGroup>
+		<ProjectReference Include="..\SiphoEngine\SiphoEngine.csproj" />
+		<Content Include="..\SiphoEngineDebugConsole\bin\$(Configuration)\$(TargetFramework)\SiphoEngineDebugConsole.exe" Condition="'$(Configuration)' == 'Debug'">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<Visible>false</Visible>
+		</Content>
+	</ItemGroup>
+
+	<Target Name="BuildDebugConsole" BeforeTargets="CopyDebugConsole" Condition="'$(Configuration)' == 'Debug'">
+		<MSBuild Projects="..\SiphoEngineDebugConsole\SiphoEngineDebugConsole.csproj"
+				 Properties="Configuration=$(Configuration);Platform=$(Platform)" />
+	</Target>
+
+	<Target Name="CopyDebugConsole" AfterTargets="Build" Condition="'$(Configuration)' == 'Debug'">
 		<Exec Command="xcopy /Y /R &quot;$(ProjectDir)..\SiphoEngineDebugConsole\bin\$(Configuration)\$(TargetFramework)\SiphoEngineDebugConsole.*&quot; &quot;$(TargetDir)&quot;" />
 	</Target>
 </Project>
